# codex-recall

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  indexer.rs  lib.rs  main.rs  memory.rs  output.rs  parser.rs  redact.rs  store.rs
src/commands/: date.rs  doctor.rs  exclude.rs  index.rs  kind.rs  memory.rs  mod.rs  pins.rs  recent.rs  search.rs  watch.rs
src/store/: tests.rs
tests/: cli.rs  search_quality.rs
